force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__AccountHardCreditNonSkew_Incremental__c.field-meta.xml
<CustomField>
    <fullName>npsp__AccountHardCreditNonSkew_Incremental__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Cuando se marcado, el trabajo nocturno Crédito duro cuenta (sin desfase) limita el número de cuentas para recalcularlas con oportunidades actualizadas recientemente en cuentas. Esto mejora el rendimiento del trabajo nocturno Totalización personalizable.</inlineHelpText>
    <label>Incremental Account Hard Credit Non-Skew</label>
    <type>Checkbox</type>
</CustomField>