force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__ChunkSize_Account_HardCredit__c.field-meta.xml
<CustomField>
    <fullName>npsp__ChunkSize_Account_HardCredit__c</fullName>
    <description>Only used by the new Customizable Rollups engine in LDV Orgs and only when required for LDV orgs</description>
    <inlineHelpText>SOLO PARA ORGANIZACIONES LDV CON ORIENTACIÓN DE SFDO. Para evitar la espera de consulta en el trabajo de lote de totalización en organizaciones con muchos millones de cuentas, este parámetro especifica el número máximo de cuentas procesadas en cada lote.</inlineHelpText>
    <label>LDV: Account Hard Credit Chunk Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>