force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__CMT_API_Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__CMT_API_Status__c</fullName>
    <description>Result of the last CustomMetadataType deployment</description>
    <inlineHelpText>JSON para el resultado de la implementación de CMT
{ &quot;jobId&quot;: &quot;repsonse&quot; }</inlineHelpText>
    <label>CMT API Deployment Result</label>
    <type>TextArea</type>
</CustomField>