force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__ContactHardCreditNonSkew_Incremental__c.field-meta.xml
<CustomField>
    <fullName>npsp__ContactHardCreditNonSkew_Incremental__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Al marcarse, el trabajo nocturno Crédito duro contacto (sin desfase) limita contactos seleccionados para recalcularlos buscando contactos en oportunidades actualizadas recientemente. Mejora el rendimiento del trabajo nocturno Totalización personalizable.</inlineHelpText>
    <label>Incremental Contact Hard Credit Non-Skew</label>
    <type>Checkbox</type>
</CustomField>