force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Customizable_Rollups_Enabled__c.field-meta.xml
<CustomField>
    <fullName>npsp__Customizable_Rollups_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque esta casilla para activar el nuevo motor de totalización personalizable de NPSP</inlineHelpText>
    <label>Enable Customizable Rollups</label>
    <type>Checkbox</type>
</CustomField>