force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Disable_Related_Records_Filter__c.field-meta.xml
<CustomField>
    <fullName>npsp__Disable_Related_Records_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque esta casilla para evitar totalizaciones de créditos duros y blancos en cuentas y contactos para que solo procesen registros de cuentas y contactos que tengan registros Oportunidad o Función de contacto de oportunidad relacionados.</inlineHelpText>
    <label>Disable Related Records Filter</label>
    <type>Checkbox</type>
</CustomField>