force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Rollups_Account_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>npsp__Rollups_Account_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Only used by the new Customizable Rollups engine</description>
    <inlineHelpText>Número de registros por lote para procesar cuando se vuelven a calcular totalizaciones de donantes en el objeto Cuenta.</inlineHelpText>
    <label>Account Hard Credit Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>