force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Rollups_Contact_SkewMode_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>npsp__Rollups_Contact_SkewMode_Batch_Size__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Only used by the new Customizable Rollups engine</description>
    <inlineHelpText>Número de registros por lote para procesar cuando se vuelven a calcular totalizaciones de donantes en el objeto Contacto utilizando el modo Desfase.</inlineHelpText>
    <label>Contact Skew Mode Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>