force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Rollups_IncrementalLastNDays_FldOverride__c.field-meta.xml
<CustomField>
    <fullName>npsp__Rollups_IncrementalLastNDays_FldOverride__c</fullName>
    <inlineHelpText>Solo para sustitución de totalizaciones incrementales. Sustituye el campo para filtrar oportunidades relacionadas para las cuentas, contactos, CCG o DR se vuelven a calcular durante el trabajo por la noche. Toma como valor predeterminado SystemModStamp.</inlineHelpText>
    <label>Incremental: Last N Days Field Override</label>
    <length>43</length>
    <type>Text</type>
</CustomField>