force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Rollups_IncrementalLastNDays_ValOverride__c.field-meta.xml
<CustomField>
    <fullName>npsp__Rollups_IncrementalLastNDays_ValOverride__c</fullName>
    <inlineHelpText>Solo para sustitución de totalizaciones incrementales. Sustituye el número de días utilizados para filtrar oportunidades relacionadas para determinar qué cuentas, contactos, CCG o DR se vuelven a calcular durante el trabajo programado por la noche.</inlineHelpText>
    <label>Incremental: Last N Days Value Override</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>