force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Rollups_Limit_on_Attached_Opps_for_Skew__c.field-meta.xml
<CustomField>
    <fullName>npsp__Rollups_Limit_on_Attached_Opps_for_Skew__c</fullName>
    <defaultValue>250</defaultValue>
    <description>Only used by the new Customizable Rollups engine</description>
    <inlineHelpText>Número máximo de oportunidades relacionadas en una cuenta o contacto permitidas en trabajos por lotes de totalización en modo de no desfase. Una cuenta o contacto con más de este número de oportunidades siempre se totalizará utilizando el modo Desfase.</inlineHelpText>
    <label>Skew Mode Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>