force-app/main/default/objects/npsp__Customizable_Rollup_Settings__c/fields/npsp__Rollups_Skew_Dispatcher_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>npsp__Rollups_Skew_Dispatcher_Batch_Size__c</fullName>
    <defaultValue>300</defaultValue>
    <description>Only used by the new Customizable Rollups engine</description>
    <inlineHelpText>Número de registros de cuentas, contactos o CCG por lote para seleccionar en el procesamiento del modo Desfase</inlineHelpText>
    <label>Skew Mode Dispatcher Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>